--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=c780b6c00b03233811b8fffc8a5bcd49
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^localhost|example\.com$'
