Support the tests via codeception (unit,api;acceptance) (#5)

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,4 @@
-UID=1000
-GID=1000
-
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_DEBUG=1
+APP_ENV=test
+APP_DEBUG=0
 ###< symfony/framework-bundle ###
