--- a/.travis.yaml
+++ b/.travis.yaml
@@ -7,24 +7,20 @@ os:
 # Define the php versions against we want to test our code
 php:
   - '7.3'
-
 # Install packages those will be required during build
 install:
   - composer install --no-interaction
-
 # Run main commands
 script:
+  - vendor/bin/phpcs
   - vendor/bin/codecept run unit,api
-#  - make run-tests-unit
-#  - make run-tests-api
-#  - make run-tests-acceptance
-
+  #- make run-tests-unit
+  #- make run-tests-api
+  #- make run-tests-acceptance
 # Tell Travis CI to monitor only 'master' branch
 branches:
   only: 
     - master
-    - feature/travis-continuous-integration
-
 # Cache folder, you can delete cache from Travis CI web interface
 cache:
   directories:
