--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "codeception/module-phpbrowser": "^1.0",
         "codeception/module-rest": "^1.0",
         "codeception/module-symfony": "^1.0",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "config": {
         "preferred-install": {
