--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "codeception/module-phpbrowser": "^1.0",
         "codeception/module-rest": "^1.0",
         "codeception/module-symfony": "^1.0",
+        "phpstan/phpstan": "^0.12.3",
         "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "^3.5"
     },
